# mtm1-W-21-21

./: CMakeLists.txt  Makefile  amount_set_str  amount_set_str.c  amount_set_str_main.c  amount_set_str_node.c  amount_set_str_node.h  amount_set_str_tests.c  amount_set_str_tests.h  element.h  main.c  makefile  matamikya  matamikya.c  matamikya_order.c  matamikya_order.h  matamikya_product.c  matamikya_product.h  mtm1DryPart2.c  node.c  node.h  order.c  order.h  product.c  product.h  test_utilities.h
tests/: matamikya_tests.c
